# android-3d-racing-game

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  gradle.properties  gradlew  gradlew.bat  settings.gradle
.github/workflows/: android-build.yml  download-assets.yml  download-premium-models.yml  download-real-assets.yml  generate-launcher-icons.yml  update-asset-library.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ASSETS_INFO.md  README.md  asset_config.json  asset_manifest.json
app/src/main/assets/models/cars/: classic_car.glb  formula_car.glb  models_metadata.json  muscle_car.glb  sports_car_low.glb
app/src/main/assets/models/tracks/: barrier.glb  checkpoint.glb  tree.glb
app/src/main/cpp/: jni_bridge.cpp
app/src/main/java/com/racing/engine/: AudioHelper.java  MainActivity.java  RacingRenderer.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
docs/: ARCHITECTURE.md  ASSETS.md  FIX_ASSETS.md  GETTING_STARTED.md
engine/assets/: AssetLoader.cpp  AssetLoader.h  glTFLoader.cpp  glTFLoader.h
engine/audio/: AudioEngine.cpp  AudioEngine.h
engine/core/: Engine.cpp  Engine.h  Track.cpp  Track.h
engine/graphics/: Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h
engine/math/: Matrix4.h  Quaternion.h  Vector3.h
engine/physics/: Vehicle.cpp  Vehicle.h
shaders/: basic.frag  basic.vert
